5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4149/executions/1800_2572.log
== TEST (2019-06-13 00:58:31) 
-- CODE:
from numpy import*
v=array(eval(input("entre com o vetor:")))
b=0
for i in v:
	if(i%2!=0):
	b=b+1
p=zeros(b,dtype=int)
x=0
g=0
for s in v:
	if(s%2 != 0):
		p[x]=v[g]
		x+=1
	g+=1
print(p)
-- ERROR:
File "XXXX", line 6
    b=b+1
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 00:58:40) 
-- CODE:
from numpy import*
v=array(eval(input("entre com o vetor:")))
b=0
for i in v:
	if(i%2!=0):
		b=b+1
p=zeros(b,dtype=int)
x=0
g=0
for s in v:
	if(s%2 != 0):
		p[x]=v[g]
		x+=1
	g+=1
print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 00:59:08) 
-- CODE:
from numpy import*
v=array(eval(input("entre com o vetor:")))
b=0
for i in v:
	if(i%2!=0):
		b=b+1
p=zeros(b,dtype=int)
x=0
g=0
for s in v:
	if(s%2 != 0):
		p[x]=v[g]
		x+=1
	g+=1
print(p)
-- EXECUTION TIME:
1.08347
-- TEST CASE 1:
---- input:
[75247561,76546316,75713658,97135671,70356874]
---- correct output:
[75247561 97135671]
---- user output:
[75247561 97135671]
-- TEST CASE 2:
---- input:
[13017594,57417542,85024758,12475981,75942785,91875987,29584192,85794217]
---- correct output:
[12475981 75942785 91875987 85794217]
---- user output:
[12475981 75942785 91875987 85794217]
-- TEST CASE 3:
---- input:
[31874903,74902746,23742046]
---- correct output:
[31874903]
---- user output:
[31874903]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 00:59:38) 
-- CODE:
from numpy import*
v=array(eval(input("entre com o vetor:")))
b=0
for i in v:
	if(i%2!=0):
		b=b+1
p=zeros(b,dtype=int)
x=0
g=0
for s in v:
	if(s%2 != 0):
		p[x]=v[g]
		x=x+1
	g=g+1
print(p)
-- EXECUTION TIME:
1.18428
-- TEST CASE 1:
---- input:
[75247561,76546316,75713658,97135671,70356874]
---- correct output:
[75247561 97135671]
---- user output:
[75247561 97135671]
-- TEST CASE 2:
---- input:
[13017594,57417542,85024758,12475981,75942785,91875987,29584192,85794217]
---- correct output:
[12475981 75942785 91875987 85794217]
---- user output:
[12475981 75942785 91875987 85794217]
-- TEST CASE 3:
---- input:
[31874903,74902746,23742046]
---- correct output:
[31874903]
---- user output:
[31874903]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 00:59:46) 
-- CODE:
from numpy import*
v=array(eval(input("entre com o vetor:")))
b=0
for i in v:
	if(i%2!=0):
		b=b+1
p=zeros(b,dtype=int)
x=0
g=0
for s in v:
	if(s%2 != 0):
		p[x]=v[g]
		x=x+1
	g=g+1
print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 00:59:50) 
-- CODE:
from numpy import*
v=array(eval(input("entre com o vetor:")))
b=0
for i in v:
	if(i%2!=0):
		b=b+1
p=zeros(b,dtype=int)
x=0
g=0
for s in v:
	if(s%2 != 0):
		p[x]=v[g]
		x=x+1
	g=g+1
print(p)
-- EXECUTION TIME:
1.05249
-- TEST CASE 1:
---- input:
[75247561,76546316,75713658,97135671,70356874]
---- correct output:
[75247561 97135671]
---- user output:
[75247561 97135671]
-- TEST CASE 2:
---- input:
[13017594,57417542,85024758,12475981,75942785,91875987,29584192,85794217]
---- correct output:
[12475981 75942785 91875987 85794217]
---- user output:
[12475981 75942785 91875987 85794217]
-- TEST CASE 3:
---- input:
[31874903,74902746,23742046]
---- correct output:
[31874903]
---- user output:
[31874903]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
